<resources>
    <string name="app_name">Alpha Meet Rooms</string>
    <string name="log_in">Войти</string>
    <string name="password">Пароль</string>
    <string name="phone">Номер телефона</string>
    <string name="pass_length">Пароль должен содержать не меньше %s символов</string>
    <string name="err_empty">Поле не может быть пустым</string>
    <string name="err_wrong_data">Вы ввели не верные данные.\nПопробуйте еще раз</string>
    <string name="err_error">Ошибка</string>
    <string name="err_conn">Что-то пошло не так.\nПроверьте подключение или попробуйте позже</string>
    <string name="err_dash">Не удалось загрузить ленту\nОбновите экран или попробуйте позже.</string>
    <string name="err_internet">Отсутствует интернет-соединение\nПопробуйте позже.</string>
    <string name="err_pass_day">Нельзя назначить встречу на прошедший день.</string>
    <string name="msg_exit">Выйти из аккаунта</string>
    <string name="msg_exit_ask">Действительно хотите выйти из своего аккаунта?</string>
    <string name="cancel">Отмена</string>
    <string name="exit">Выйти</string>
    <string name="content_description">Image</string>
    <string name="title_register">Вход</string>
    <string name="action_register">Войти</string>
    <string name="str_room_free">Комната свободна</string>
    <string name="str_data_is_update">Обновление данных...</string>
    <string name="str_to_book">Забронировать</string>
    <string name="str_maybe_today">сегодня?</string>
    <string name="str_today">сегодня</string>
    <string name="str_maybe_tomorrow">завтра?</string>
    <string name="str_tomorrow">завтра</string>
    <string name="str_projector">Проектор</string>
    <string name="str_markerboard">Маркерная доска</string>
    <string name="str_seats">%s посадочных мест</string>
    <string name="str_start_time">Время начала</string>
    <string name="str_end_time">Время окончания</string>
    <string name="str_pick_date">Изменить дату</string>
    <string name="str_pick_time">Установить время</string>
    <string name="str_send_reserve">Запросить резерв</string>
    <string name="str_description">Описание</string>
    <string name="str_reserve">Занять</string>
    <string name="str_reserve_time">Время резерва</string>
    <string name="err_time_interval">Время начала не должно быть раньше времени окончания!</string>
    <string name="str_time_interval">%1$s - %2$s</string>
    <string name="str_next_meet">Ближайшее резервирование:</string>
    <string name="ntf_success">Ваша бронь одобрена</string>
    <string name="ntf_success_text">%1$s с %2$s %3$s в вашем распоряжении.</string>
    <string name="ntf_decline">Отказано в бронировании</string>
    <string name="ntf_decline_text">%1$s не может быть зарезервирована с %2$s %3$s, попробуйте другое время или комнату</string>
</resources>
