<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRoomName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/lin_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/txtRoomName"
            tools:layout_editor_absoluteX="30dp">

            <ImageView
                android:id="@+id/imgProjector"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/content_description"
                app:layout_constraintEnd_toStartOf="@+id/imgBoard"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_proektor" />


            <ImageView
                android:id="@+id/imgBoard"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/content_description"
                app:layout_constraintEnd_toStartOf="@+id/txtSeats"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_markerboard" />

            <TextView
                android:id="@+id/txtSeats"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:textSize="20sp"

                app:layout_constraintEnd_toStartOf="@+id/imgPerson"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imgPerson"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:contentDescription="@string/content_description"
                app:layout_constraintEnd_toStartOf="@+id/imgFavorite"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person" />
        </LinearLayout>

        <View
            android:id="@+id/separator1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorUltraLightGray"
            app:layout_constraintTop_toBottomOf="@+id/lin_lay"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:text="@string/str_today"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separator1" />

        <TextView
            android:id="@+id/butDateHelper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:text="@string/str_maybe_tomorrow"
            android:textColor="@color/colorAccent"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textDate" />

        <Button
            android:id="@+id/btnChangeDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:text="@string/str_pick_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/butDateHelper" />

        <TextView
            android:id="@+id/txtTimeInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:gravity="center"
            android:text="15:00 - 16:00"
            android:textSize="48sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangeDate" />

        <Button
            android:id="@+id/btnSetTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:text="@string/str_pick_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTimeInterval" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/str_send_reserve"
            android:textSize="24sp"
            app:backgroundTint="@color/action_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>