<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/log_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorUltraLightGray"
        tools:context=".view.login.LoginActivity">

    <TextView
            android:id="@+id/txtRegisterTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/title_register"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout

            android:id="@+id/inputLayoutPhone"
            style="@style/text_field_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/phone"
            app:helperTextTextColor="@color/colorGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtRegisterTitle">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="14"
                android:maxLines="1"
                android:textColor="@color/subtitle_text_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPass"
            style="@style/text_field_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/inputLayoutPhone"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGray">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:maxLines="1"
                android:textColor="@color/subtitle_text_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.circularreveal.CircularRevealFrameLayout
            android:id="@+id/circularRevealFrameLayout"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.55"
            app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/log_in" />


        <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progressbarLogin"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/colorPrimary"
                android:translationZ="20dp"
                android:visibility="invisible" />


    </com.google.android.material.circularreveal.CircularRevealFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
